--- a/popup.html
+++ b/popup.html
@@ -6,41 +6,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Xmator</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Poppins:wght@300;400;600&display=swap');
 
         * {
             box-sizing: border-box;
-        }
-
-        span {
-            font-size: 90%;
-            font-weight: 500;
+            font-family: Poppins, sans-serif;
         }
 
         body {
-            font-family: Poppins;
-            width: 300px;
-            padding: 10px;
-            text-align: left;
-            background-color: #111111;
+            width: 320px;
+            padding: 15px;
+            background-color: #111;
             color: white;
+            text-align: left;
+        }
+
+        h2 {
+            margin: 0 0 10px;
         }
 
         textarea {
-            width: 90%;
-            height: 80px;
+            width: 100%;
+            height: 60px;
             box-sizing: border-box;
             resize: none;
+            padding: 5px;
+            border-radius: 5px;
+            border: none;
+            outline: none;
+        }
+
+        .mode-selection {
+            margin: 10px 0;
+        }
+
+        label {
+            margin-right: 15px;
+            cursor: pointer;
         }
 
         button {
-            padding: 15px 30px;
-            width: 100px;
+            width: 100%;
+            padding: 12px;
             cursor: pointer;
             background: #1DA1F2;
             color: #fff;
             border: none;
-
+            border-radius: 5px;
+            font-weight: 600;
         }
     </style>
 </head>
@@ -49,8 +62,20 @@
     <h2>Xmator</h2>
     <p>Enter keywords (comma separated) to keep:</p>
     <textarea id="keywords" placeholder="tech, developer, AI"></textarea>
-    <br>
+
+    <div class="mode-selection">
+        <label>
+            <input type="radio" name="mode" value="follow" checked>
+            Follow
+        </label>
+        <label>
+            <input type="radio" name="mode" value="unfollow">
+            Unfollow
+        </label>
+    </div>
+
     <button id="start">Start</button>
+
     <script src="popup.js"></script>
 </body>
 
