--- a/popup.html
+++ b/popup.html
@@ -14,8 +14,8 @@
         }
 
         body {
-            width: 320px;
-            padding: 15px;
+            width: 350px;
+            padding: 20px;
             background-color: #111;
             color: white;
             text-align: left;
@@ -23,6 +23,32 @@
 
         h2 {
             margin: 0 0 10px;
+            text-align: center;
+            color: #1DA1F2;
+        }
+
+        .description {
+            font-size: 12px;
+            color: #aaa;
+            margin-bottom: 15px;
+            line-height: 1.4;
+        }
+
+        .info-box {
+            background: #222;
+            padding: 10px;
+            border-radius: 8px;
+            margin-bottom: 15px;
+            font-size: 11px;
+            line-height: 1.3;
+        }
+
+        .info-box.follow {
+            border-left: 3px solid #00D084;
+        }
+
+        .info-box.unfollow {
+            border-left: 3px solid #FF6B6B;
         }
 
         textarea {
@@ -30,51 +56,109 @@
             height: 60px;
             box-sizing: border-box;
             resize: none;
-            padding: 5px;
-            border-radius: 5px;
-            border: none;
+            padding: 10px;
+            border-radius: 8px;
+            border: 1px solid #333;
             outline: none;
+            background: #222;
+            color: white;
+            font-size: 13px;
+        }
+
+        textarea::placeholder {
+            color: #666;
         }
 
         .mode-selection {
-            margin: 10px 0;
+            margin: 15px 0;
+            display: flex;
+            gap: 10px;
         }
 
-        label {
-            margin-right: 15px;
+        .mode-option {
+            flex: 1;
+            position: relative;
+        }
+
+        .mode-option input[type="radio"] {
+            display: none;
+        }
+
+        .mode-option label {
+            display: block;
+            padding: 12px;
+            border: 2px solid #333;
+            border-radius: 8px;
             cursor: pointer;
+            text-align: center;
+            transition: all 0.3s ease;
+            font-weight: 500;
+        }
+
+        .mode-option input[type="radio"]:checked + label {
+            border-color: #1DA1F2;
+            background: rgba(29, 161, 242, 0.1);
+            color: #1DA1F2;
         }
 
         button {
             width: 100%;
-            padding: 12px;
+            padding: 15px;
             cursor: pointer;
             background: #1DA1F2;
             color: #fff;
             border: none;
-            border-radius: 5px;
+            border-radius: 8px;
             font-weight: 600;
+            font-size: 14px;
+            transition: background 0.3s ease;
+        }
+
+        button:hover {
+            background: #0d8bd9;
+        }
+
+        button:disabled {
+            background: #555;
+            cursor: not-allowed;
+        }
+
+        .status {
+            margin-top: 10px;
+            font-size: 12px;
+            text-align: center;
+            color: #666;
         }
     </style>
 </head>
 
 <body>
     <h2>Xmator</h2>
-    <p>Enter keywords (comma separated) to keep:</p>
-    <textarea id="keywords" placeholder="tech, developer, AI"></textarea>
-
-    <div class="mode-selection">
-        <label>
-            <input type="radio" name="mode" value="follow" checked>
-            Follow
-        </label>
-        <label>
-            <input type="radio" name="mode" value="unfollow">
-            Unfollow
-        </label>
+    <div class="description">
+        Smart Twitter automation tool that finds "Follow" and "Following" buttons anywhere on Twitter/X and takes action based on your specified keywords.
     </div>
 
-    <button id="start">Start</button>
+    <p style="margin: 15px 0 5px; font-weight: 500;">Keywords to keep (comma separated):</p>
+    <textarea id="keywords" placeholder="tech, developer, AI, startup, crypto (leave empty to process all profiles)"></textarea>
+
+    <div class="mode-selection">
+        <div class="mode-option">
+            <input type="radio" name="mode" value="follow" id="follow-mode">
+            <label for="follow-mode">Follow</label>
+        </div>
+        <div class="mode-option">
+            <input type="radio" name="mode" value="unfollow" id="unfollow-mode" checked>
+            <label for="unfollow-mode">Unfollow</label>
+        </div>
+    </div>
+
+    <div id="info-box" class="info-box unfollow">
+        <strong>Unfollow Mode:</strong> Finds 'Following' buttons and unfollows accounts that don't match your keywords in their bio. If no keywords are specified, unfollows all accounts.
+    </div>
+
+    <button id="start">Start Xmator</button>
+    
+    <div class="status" id="status">Ready to start</div>
 
     <script src="popup.js"></script>
 </body>
